--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/mocha/bin/mocha",
-    "prepublish": "node node_modules/gulp/bin/gulp compile",
+    "prepublish": "node node_modules/gulp/bin/gulp compile"
   },
   "author": "Wouter Buckens <wouter.buckens@inxco.be>",
   "license": "MIT",
