--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "node_modules/mocha/bin/mocha",
     "prepublish": "node node_modules/gulp/bin/gulp compile"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/INXCO/stream-magic.git"
+  },
   "author": "Wouter Buckens <wouter.buckens@inxco.be>",
   "license": "MIT",
   "devDependencies": {
