--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/INXCO/stream-magic.git"
+    "url": "https://github.com/INXCO/streammagic.git"
   },
   "bugs": {
-    "url": "https://github.com/INXCO/stream-magic/issues"
+    "url": "https://github.com/INXCO/streammagic/issues"
   },
   "author": "Wouter Buckens <wouter.buckens@inxco.be>",
   "license": "MIT",
