--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
-    "coffee-script": "^1.10.0",
     "gulp": "^3.9.0",
     "gulp-coffee": "^2.3.1",
-    "gulp-util": "^3.0.7",
     "mocha": "^2.3.3",
+    "gulp-plumber": "^1.1.0",
     "simple-lipsum": "^0.1.5"
   },
   "keywords": ["stream", "streams", "tostream", "convert", "string", "array", "object"]
