--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "bugs": {
     "url": "https://github.com/INXCO/streammagic/issues"
   },
-  "author": "Wouter Buckens <wouter.buckens@inxco.be>",
+  "author": "Wouter Buckens <wouter.buckens@primetime.be>",
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.3.0",
