--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "node node_modules/gulp/bin/gulp compile --silent && node test.js",
-    "prepublish": "node node_modules/gulp/bin/gulp compile"
+    "prepublish": "node node_modules/gulp/bin/gulp compile",
+	"preversion": "npm test"
   },
   "repository": {
     "type": "git",
