--- a/.npmignore
+++ b/.npmignore
@@ -2,4 +2,4 @@
 # package.json, readme.md, license.txt are never excluded so no need to explicitly include them again - see https://docs.npmjs.com/misc/developers
 
 *
-!index.js
+!dist/index.js
