--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node node_modules/.bin/gulp",
-
-    "pretest": "node node_modules/.bin/gulp compile --silent",
+    "pretest": "node node_modules/.bin/gulp compile-sourcemaps --silent",
     "test": "node_modules/.bin/tap dist/test.js --coverage",
-
-    "prepublish": "node node_modules/gulp/bin/gulp compile",
+    "prepublish": "node node_modules/.bin/gulp compile",
     "preversion": "npm test"
   },
   "repository": {
@@ -25,6 +23,7 @@
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.4",
     "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^2.5.0",
     "simple-lipsum": "^0.1.5",
     "tap": "^10.3.0"
   },
